[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prosint"
version = "1.0.0"
description = "PrOSINT - OSINT Multi-Source Intelligence Tool"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ash"}]
readme = "README.md"

dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "dnspython>=2.7.0",
    "python-whois>=0.9.0",
    "shodan>=1.31.0",
    "phonenumbers>=8.13.0",
    "Pillow>=11.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
face = [
    "deepface>=0.0.92",
    "tf-keras>=2.19.0",
]

[project.scripts]
prosint = "cli.main:app"

[tool.setuptools.packages.find]
include = ["core*", "utils*", "cli*", "web*"]
